[package]
name = "kilt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
env_logger = "0.9.0"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "2", features = ["derive", "full", "bit-vec"] }

subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
